--- a/sass/base/_main-body-settings.scss
+++ b/sass/base/_main-body-settings.scss
@@ -8,6 +8,10 @@
   font-style: normal;
 }
 
+.container-mobile {
+  max-width: 768px;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
